# stickIt

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: sticky-notes-app.desktop
docs/: design.md  requirements.md  tasks.md
src/: __init__.py  autostart.py  color_picker.py  constants.py  editor.py  main.py  models.py  note_manager.py  note_window.py  persistence.py
tests/: test_color_picker.py  test_editor.py  test_note_manager.py  test_persistence.py  test_resize.py
